recursion.lessons.recursion.koch.Koch.scala.error
Koch:36: error: Unmatched closing brace '}' ignored here
}
^Koch:40: error: expected start of definition
	override def run() {
                 ^Koch:43: error: Unmatched closing brace '}' ignored here
}
^